--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,14 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: #EDEDED;
+  background: #333333;
   font-size: 18px;
 }
 
 header {
+  background: #EDEDED;  
   width: 100%;
-  margin-top: 5rem;
+  padding-top: 5rem;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -64,7 +65,7 @@ header {
 
 .intro {
   width: 100%;
-  background: rgba(0, 0, 0, 0.75);
+  background: #333333;
   margin: 3rem 0 0;
   padding: 3rem 0;
 }
@@ -78,7 +79,7 @@ header {
 }
 
 .intro-rule {
-  margin: auto;
+  margin: 2rem auto;
   display: table;
   text-align: center;
   color: #fbc5d7;
@@ -88,12 +89,14 @@ header {
 
 .intro-button {
   background: #d75e86;;
-  padding: 30px 100px;
+  padding: 30px 0;
   margin: 1rem auto;
   opacity: 1;
   display: block;
   border-radius: 76px;
-  width: 16rem;
+  width: 100%;
+  max-width: min(16rem, 100%);
+  min-width: max(36rem, 50%);
   text-align: center;
   cursor: pointer;
   box-shadow: 2px 2px 8px rgba(0,0,0,0.5);
@@ -110,4 +113,27 @@ header {
   font-size: 2rem;
   opacity: 1;
   text-align: center;
+}
+
+@media screen and (min-width: 0px) and (max-device-width: 425px) {
+  html, body {
+    font-size: 8px;
+  }
+  .intro {
+    padding: 3rem 2rem;
+    width: calc(100% - 4rem);
+  }
+  .intro-rule {
+    font-size: 1.8rem;
+  }
+}
+@media screen and (min-width: 426px) and (max-device-width: 920px) {
+  html, body {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 911px)  {
+  html, body {
+    font-size: 18px;
+  }
 }
