--- a/css/exhibitor-icons.css
+++ b/css/exhibitor-icons.css
@@ -97,49 +97,49 @@ Icon classes can be used entirely standalone. They are named after their origina
 }
 .i-Lu_Ra_999 {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -3060px;
+  background-position: 0px -3162px;
   width: 100px;
   height: 100px;
 }
 .i-Luna_Momizi {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -3162px;
+  background-position: 0px -3264px;
   width: 100px;
   height: 100px;
 }
 .i-MichigariArch {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -3264px;
+  background-position: 0px -3366px;
   width: 100px;
   height: 100px;
 }
 .i-MikanTakano {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -3366px;
+  background-position: 0px -3468px;
   width: 100px;
   height: 100px;
 }
 .i-Musha_JP {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -3672px;
+  background-position: 0px -3774px;
   width: 100px;
   height: 100px;
 }
 .i-Sakazuki_naigi {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -4896px;
+  background-position: 0px -4998px;
   width: 100px;
   height: 100px;
 }
 .i-VR_pasta {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -5508px;
+  background-position: 0px -5610px;
   width: 100px;
   height: 100px;
 }
 .i-Yagihata4x {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -5814px;
+  background-position: 0px -5916px;
   width: 100px;
   height: 100px;
 }
@@ -209,147 +209,153 @@ Icon classes can be used entirely standalone. They are named after their origina
   width: 100px;
   height: 100px;
 }
-.i-kohack_v {
+.i-kelupu {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -2652px;
   width: 100px;
   height: 100px;
 }
-.i-kon_acc {
+.i-kohack_v {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -2754px;
   width: 100px;
   height: 100px;
 }
-.i-konsome_vrc {
+.i-kon_acc {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -2856px;
   width: 100px;
   height: 100px;
 }
-.i-lag_vrchat {
+.i-konsome_vrc {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -2958px;
   width: 100px;
   height: 100px;
 }
-.i-mikkohietala {
+.i-lag_vrchat {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -3468px;
+  background-position: 0px -3060px;
   width: 100px;
   height: 100px;
 }
-.i-momoma_creative {
+.i-mikkohietala {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -3570px;
   width: 100px;
   height: 100px;
 }
-.i-nekotokageee {
+.i-momoma_creative {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -3774px;
+  background-position: 0px -3672px;
   width: 100px;
   height: 100px;
 }
-.i-noriben327 {
+.i-nekotokageee {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -3876px;
   width: 100px;
   height: 100px;
 }
-.i-on_asti {
+.i-noriben327 {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -3978px;
   width: 100px;
   height: 100px;
 }
-.i-onitikuTRAIN {
+.i-on_asti {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -4080px;
   width: 100px;
   height: 100px;
 }
-.i-paon_line {
+.i-onitikuTRAIN {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -4182px;
   width: 100px;
   height: 100px;
 }
-.i-peke4444 {
+.i-paon_line {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -4284px;
   width: 100px;
   height: 100px;
 }
-.i-plus515 {
+.i-peke4444 {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -4386px;
   width: 100px;
   height: 100px;
 }
-.i-popo_para {
+.i-plus515 {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -4488px;
   width: 100px;
   height: 100px;
 }
-.i-remiiiiiiit {
+.i-popo_para {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -4590px;
   width: 100px;
   height: 100px;
 }
-.i-rotten_apples__ {
+.i-remiiiiiiit {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -4692px;
   width: 100px;
   height: 100px;
 }
-.i-sabamirin_mof {
+.i-rotten_apples__ {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -4794px;
   width: 100px;
   height: 100px;
 }
-.i-sorakazehuuta {
+.i-sabamirin_mof {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -4998px;
+  background-position: 0px -4896px;
   width: 100px;
   height: 100px;
 }
-.i-sunnyf6789 {
+.i-sorakazehuuta {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -5100px;
   width: 100px;
   height: 100px;
 }
-.i-tesla_0123 {
+.i-sunnyf6789 {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -5202px;
   width: 100px;
   height: 100px;
 }
-.i-tonomaoo {
+.i-tesla_0123 {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -5304px;
   width: 100px;
   height: 100px;
 }
-.i-vacss2 {
+.i-tonomaoo {
   background-image: url(/img/exhibitor-icons.webp);
   background-position: 0px -5406px;
   width: 100px;
   height: 100px;
 }
+.i-vacss2 {
+  background-image: url(/img/exhibitor-icons.webp);
+  background-position: 0px -5508px;
+  width: 100px;
+  height: 100px;
+}
 .i-wahekui_1 {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -5610px;
+  background-position: 0px -5712px;
   width: 100px;
   height: 100px;
 }
 .i-wallL3D {
   background-image: url(/img/exhibitor-icons.webp);
-  background-position: 0px -5712px;
+  background-position: 0px -5814px;
   width: 100px;
   height: 100px;
 }
